refactor calendar